--- a/search-files/source/info.plist
+++ b/search-files/source/info.plist
@@ -1233,7 +1233,7 @@ fi</string>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>script</key>
-				<string>mv "$1" ~/.Trash</string>
+				<string>mv "$@" ~/.Trash</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
