--- a/search-for-content/source/info.plist
+++ b/search-for-content/source/info.plist
@@ -114,11 +114,50 @@
 				<false/>
 			</dict>
 		</array>
+		<key>E79F3F4C-9E36-4396-8905-BE068CE76844</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>F4221017-5D02-4BF8-9521-3DFE327BFE80</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>EC970D1C-4499-418D-A85E-D57AC07E459E</key>
 		<array>
 			<dict>
 				<key>destinationuid</key>
 				<string>43960CF9-3361-45B3-A594-559B4B1ACA3F</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>F1384023-BE2A-4D28-8DAE-C399E4AB9A29</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>676993E7-2FC9-4BFD-BA94-4B247BDA495F</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
+		<key>F4221017-5D02-4BF8-9521-3DFE327BFE80</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>F1384023-BE2A-4D28-8DAE-C399E4AB9A29</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -547,6 +586,72 @@ fi</string>
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>count</key>
+				<integer>1</integer>
+				<key>keychar</key>
+				<string>g</string>
+				<key>keycode</key>
+				<integer>-1</integer>
+				<key>keymod</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.dispatchkeycombo</string>
+			<key>uid</key>
+			<string>F1384023-BE2A-4D28-8DAE-C399E4AB9A29</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>count</key>
+				<integer>1</integer>
+				<key>keychar</key>
+				<string>↩</string>
+				<key>keycode</key>
+				<integer>36</integer>
+				<key>keymod</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.output.dispatchkeycombo</string>
+			<key>uid</key>
+			<string>676993E7-2FC9-4BFD-BA94-4B247BDA495F</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>openwith</key>
+				<string></string>
+				<key>sourcefile</key>
+				<string></string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.openfile</string>
+			<key>uid</key>
+			<string>E79F3F4C-9E36-4396-8905-BE068CE76844</string>
+			<key>version</key>
+			<integer>3</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>seconds</key>
+				<string>0.1</string>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.utility.delay</string>
+			<key>uid</key>
+			<string>F4221017-5D02-4BF8-9521-3DFE327BFE80</string>
+			<key>version</key>
+			<integer>1</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string>Details on how to effectively use this workflow are found in the GitHub repository attached to this workflow.
@@ -589,6 +694,13 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>ypos</key>
 			<integer>290</integer>
 		</dict>
+		<key>676993E7-2FC9-4BFD-BA94-4B247BDA495F</key>
+		<dict>
+			<key>xpos</key>
+			<integer>780</integer>
+			<key>ypos</key>
+			<integer>540</integer>
+		</dict>
 		<key>6D57C744-41AD-44F3-B941-863B242D62B6</key>
 		<dict>
 			<key>xpos</key>
@@ -617,12 +729,35 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>ypos</key>
 			<integer>30</integer>
 		</dict>
+		<key>E79F3F4C-9E36-4396-8905-BE068CE76844</key>
+		<dict>
+			<key>note</key>
+			<string>Open GitHub url of user (if exists)</string>
+			<key>xpos</key>
+			<integer>410</integer>
+			<key>ypos</key>
+			<integer>540</integer>
+		</dict>
 		<key>EC970D1C-4499-418D-A85E-D57AC07E459E</key>
 		<dict>
 			<key>xpos</key>
 			<integer>390</integer>
 			<key>ypos</key>
 			<integer>30</integer>
+		</dict>
+		<key>F1384023-BE2A-4D28-8DAE-C399E4AB9A29</key>
+		<dict>
+			<key>xpos</key>
+			<integer>630</integer>
+			<key>ypos</key>
+			<integer>540</integer>
+		</dict>
+		<key>F4221017-5D02-4BF8-9521-3DFE327BFE80</key>
+		<dict>
+			<key>xpos</key>
+			<integer>560</integer>
+			<key>ypos</key>
+			<integer>570</integer>
 		</dict>
 		<key>FBB29EE6-5791-4967-BB72-34726D0FCB06</key>
 		<dict>
