--- a/search-selection/source/info.plist
+++ b/search-selection/source/info.plist
@@ -1189,11 +1189,11 @@ fi</string>
 				<key>focusedappvariablename</key>
 				<string></string>
 				<key>hotkey</key>
-				<integer>32</integer>
+				<integer>26</integer>
 				<key>hotmod</key>
 				<integer>917504</integer>
 				<key>hotstring</key>
-				<string>U</string>
+				<string>7</string>
 				<key>leftcursor</key>
 				<false/>
 				<key>modsmode</key>
