--- a/objects-library/source/info.plist
+++ b/objects-library/source/info.plist
@@ -527,7 +527,7 @@ Post any issues and feature requests you have there. 💜</string>
 			<key>colorindex</key>
 			<integer>5</integer>
 			<key>note</key>
-			<string>This one actually updates this workflow in case I add some new objects :)</string>
+			<string>This OneUpdater actually updates this workflow in case I add some new objects :)</string>
 			<key>xpos</key>
 			<integer>590</integer>
 			<key>ypos</key>
