--- a/karabiner-reload/source/info.plist
+++ b/karabiner-reload/source/info.plist
@@ -214,7 +214,7 @@ fi</string>
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>keyword</key>
-				<string>reload karabiner</string>
+				<string>rkar</string>
 				<key>subtext</key>
 				<string></string>
 				<key>text</key>
