--- a/folder-search/source/info.plist
+++ b/folder-search/source/info.plist
@@ -311,7 +311,7 @@ tell application "System Events"	if frontmost of process "iTerm2" is false then
 				<key>includesystem</key>
 				<false/>
 				<key>keyword</key>
-				<string>folders</string>
+				<string>fo</string>
 				<key>runningsubtext</key>
 				<string></string>
 				<key>scopes</key>
@@ -546,7 +546,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.1.3</string>
+	<string>1.1.4</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
