--- a/search-for-content/source/info.plist
+++ b/search-for-content/source/info.plist
@@ -259,7 +259,7 @@
 				<key>includesystem</key>
 				<false/>
 				<key>keyword</key>
-				<string>mindnode content</string>
+				<string>smindnodecontent</string>
 				<key>runningsubtext</key>
 				<string></string>
 				<key>scopes</key>
@@ -469,7 +469,7 @@ fi</string>
 				<key>includesystem</key>
 				<false/>
 				<key>keyword</key>
-				<string>pdf content</string>
+				<string>spdfcontent</string>
 				<key>runningsubtext</key>
 				<string></string>
 				<key>scopes</key>
@@ -548,7 +548,7 @@ fi</string>
 				<key>includesystem</key>
 				<false/>
 				<key>keyword</key>
-				<string>contacts</string>
+				<string>sc</string>
 				<key>runningsubtext</key>
 				<string></string>
 				<key>scopes</key>
@@ -779,7 +779,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.0.0</string>
+	<string>1.0.1</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev</string>
 </dict>
