--- a/file-actions/source/info.plist
+++ b/file-actions/source/info.plist
@@ -74,7 +74,18 @@
 			</dict>
 		</array>
 		<key>237B73E3-34B1-4219-A931-904504531BA1</key>
-		<array/>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>1A6F260B-D51D-4E14-80AE-876E69833BF8</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>2BD3A8BE-D9BA-4B12-948C-E2632F3D67ED</key>
 		<array>
 			<dict>
@@ -1297,7 +1308,7 @@ Post any issues and feature requests you have there. 💜</string>
 		</dict>
 	</dict>
 	<key>version</key>
-	<string>1.0.3</string>
+	<string>1.0.4</string>
 	<key>webaddress</key>
 	<string>https://github.com/nikitavoloboev/small-workflows</string>
 </dict>
