--- a/file-actions/source/info.plist
+++ b/file-actions/source/info.plist
@@ -74,18 +74,7 @@
 			</dict>
 		</array>
 		<key>237B73E3-34B1-4219-A931-904504531BA1</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>1A6F260B-D51D-4E14-80AE-876E69833BF8</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>2BD3A8BE-D9BA-4B12-948C-E2632F3D67ED</key>
 		<array>
 			<dict>
